<resources>
    <string name="app_name">TravelJournal</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andreea Horovei</string>
    <string name="nav_header_subtitle">andreea.horovei@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_aboutUs">About us</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="favourites">Favourites</string>


    <string name="name">Name:</string>
    <string name="destination">Destination:</string>
    <string name="trip_type">Trip type:</string>
    <string name="price">Price:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="rating">Rate your experience:</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>

    <string name="price_start">--EUR</string>
    <string name="select_image">SELECT IMAGE</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="name_cannot_be_empty">You must complete trip name</string>
    <string name="destination_cannot_be_empty">You must complete trip destination</string>


</resources>