<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewTripActivity"
    android:background="@color/light_green">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:textStyle="bold"
            android:textColor="#335908"
            android:text="@string/name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"
                android:background="@color/light_green"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/destination"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_trip_destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_trip_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:inputType="text"
                android:backgroundTint="@color/light_green"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_type"
            android:textColor="@color/dark_green"
            android:layout_marginStart="40dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/trip_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:backgroundTint="@color/dark_green">

            <RadioButton
                android:id="@+id/city_break"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city_break"
                android:textSize="16sp"
                android:buttonTint="@color/dark_green"/>

            <RadioButton
                android:id="@+id/sea_side"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sea_side"
                android:textSize="16sp"
                android:buttonTint="@color/dark_green"/>

            <RadioButton
                android:id="@+id/mountains"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mountains"
                android:textSize="16sp"
                android:buttonTint="@color/dark_green"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/dark_green"
            android:layout_marginStart="40dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <SeekBar
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:padding="8dp"
            android:progressBackgroundTint="@color/dark_green"
            android:progressTint="@color/dark_green"
            android:theme="@style/seekBarColor"
            android:thumbTint="@color/dark_green"/>

        <TextView
            android:id="@+id/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/start_date"
            android:textSize="20sp"
            android:textColor="@color/dark_green"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:calendarTextColor="@color/dark_green"
            android:layout_gravity="center_horizontal">
        </DatePicker>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:textColor="@color/dark_green"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <DatePicker
            android:id="@+id/end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="center_horizontal"
            android:calendarTextColor="@color/dark_green">
        </DatePicker>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="Gallery photo"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <Button
            android:hint="@string/select_image"
            android:onClick="btnSelectPhotoOnClick"
            android:id="@+id/gallery_photo"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="180dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:text="SELECT"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/dark_green"
            android:textColor="#e3ffffff"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/dark_green"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"/>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:layout_gravity="center"
            android:stepSize="0.5"
            android:progressTint="@color/dark_green" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/image_path_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="SAVE TRIP"
            android:onClick="btnSaveOnClick"
            android:backgroundTint="@color/dark_green"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>


    </LinearLayout>

</ScrollView>